[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "font-nameid"
version = "0.1.0"
description = "NameID table manipulation and replacement tools for font metadata editing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fonttools>=4.40.0",
    "rich>=13.0.0",
]

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"*" = ["*.py", "core/**/*"]

